src/components/Projects/styles.scss
.projects {
    flex-wrap: wrap;
    overflow-y: auto;  
    height: 100vh;
    padding-bottom: 100px;

    .project {
        width: 600px;
        height: 200px;
        display: flex;
        align-items: center;
        justify-content: space-around;
        background-color: #cccccc;
        margin: 20px;
        padding: 10px;
        border-radius: 3px;
        cursor: pointer;
        transition: all 0.3s ease;

        .img-wrapper {
            width: 50%;
            height: 100%;
            border-radius: 10px 10px 0 0;
            overflow: hidden;

            img {
                width: 100%;
                height: 100%;
                object-fit: cover;
            }
        }

        .meta {
            width: 50%;
            height: 100%;
            margin-inline: 20px;
            position: relative;
        }

        .name {
            font-family: 'Edu NSW ACT Foundation', cursive;
            font-size: 20px;
            font-weight: 600;
            color: #333;
            text-decoration: underline;
            padding: 10px;
        }

        .description {
            color: black;
        }

        .icons {
            position: absolute;
            bottom: 0;
            left: 0;
            width: 100%;

            i {
                font-size: 25px;
                padding: 5px;
                color: white;
                border-radius: 20px;
                background: black;
                margin-inline: 5px;
                cursor: pointer;
            }
        }
        
    }
}

/* Mobile */
@media (max-width: 768px) {
    .projects {
        .project {
            position: relative;
            width: 100%;
            height: 400px;
            flex-direction: column;
            margin: 5px 0;
            border-radius: 0;
            cursor: pointer;
    
            .img-wrapper {
                position: absolute;
                top: 60px;
                width: 100%;
                height: 50%;
                border-radius: 10px 10px 0 0;
                overflow: hidden;
    
                img {
                    width: 100%;
                    height: 100%;
                    object-fit: scale-down;
                }
            }
    
            .meta {
                position: absolute;
                width: 100%;
                height: 100%;
                margin-inline: 0;
                position: relative;
    
                .name {
                    top: 10px;
                    position: absolute;
                    font-size: 20px;
                    font-weight: 600;
                    color: #333;
                    text-decoration: underline;
                    padding: 10px;
                }
        
                .description {
                    position: absolute;
                    bottom: 90px;
                    color: black;
                }
        
                .icons {
                    position: absolute;
                    bottom: 0;
                    top: auto;
                    width: 100%;
        
                    i {
                        font-size: 25px;
                        padding: 5px;
                        color: white;
                        border-radius: 20px;
                        background: black;
                        margin-inline: 5px;
                        cursor: pointer;
                    }
                }
        }
        }
    }
}

